--- a/app/globals.css
+++ b/app/globals.css
@@ -18,3 +18,10 @@
     }
   
 }
+
+.text-outline{
+    -webkit-text-stroke: 1px #ffffff;
+}
+.text-outline-hover{
+    -webkit-text-stroke: 1px #00ff99 ;
+}
